Implement DATEDIFF
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>